# fizzbuzz

./: README.md  Taskfile.yml  flake.nix  pyproject.toml  renovate.json
.github/: dependabot.yml
.github/workflows/: validate.yml
app/: main.py  runner.py
app/controller/: fizzbuzz.py  protocol.py
app/service/: router.py
app/service/loader/: environment_variable_loader.py
app/service/parser/: parser.py  parser_output.py
app/service/runner/: runner.py  runner_config.py  selector.py
app/service/runner/fizzbuzz_presenter/: buzz.py  fizz.py  fizz_buzz.py  otherwise.py  protocol.py
tests/: test_hello.py
tests/service/loader/: test_environment_variable_loader.py
tests/service/runner/: test_runner_config.py  test_selector.py
tests/service/runner/fizzbuzz_presenter/: test_buzz.py  test_fizz.py  test_fizzbuzz.py  test_otherwise.py
