[project]
name = "fizzbuzz"
version = "0.1.0"
description = "simple fizzbuzz cli"
readme = "README.md"
requires-python = ">=3.12.6"
dependencies = [
    "pydantic>=2.10.3",
]

[tool.uv]
dev-dependencies = [
    "black>=24.10.0",
    "coverage>=7.6.9",
    "mypy>=1.13.0",
    "pytest>=8.3.4",
    "ruff>=0.8.2",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["I"]
ignore = []

[tool.ruff.lint.isort]
force-sort-within-sections = true

[tool.coverage.run]
omit = [
    "./tests/*",
    "protocol.py",
]
